Fix: add touch-action to improve button tap handling on iOS

--- a/fullPage_style.css
+++ b/fullPage_style.css
@@ -143,6 +143,7 @@ main .container {
   transition: background 0.3s;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   user-select: none;
+  touch-action: manipulation;
 }
 
 .button:hover {
